--- a/KapivaFutF.html
+++ b/KapivaFutF.html
@@ -45,7 +45,7 @@
         }
 
         body {
-            background-image: url('./imagens/Kapiva_futsal_F.jpg');
+            background-color: rgb(16, 34, 70);
             background-size: 10%;
             /* usado para a imagem do fundo */
         }
