--- a/KapivaFutM.html
+++ b/KapivaFutM.html
@@ -45,7 +45,7 @@
         }
 
         body {
-            background-image: url('./imagens/Kapiva_futsal_M.jpg');
+            background-color: rgb(10, 31, 62);
             background-size: 10%;
             /* usado para a imagem do fundo */
         }
