--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
             Essa versão durou da fundação (21/06/2017) até o dia 03 de Setembro de 2018,
             quando a atlética passou por uma renovaçãoe aproveitou seu
             <a href="https://encurtador.com.br/LRopn"><span style="color: rgb(248, 170, 0);">
-                    post de numero 100</span></a>, para divulgar a nova e também atual logo
+                    post de numero 100</span></a>, para divulgar a nova e também atual logo.
         </p>
-
+        <h3>Contato</h3>
+        <p>Para mais informções entrar em contato via instagram: <a
+                href="https://www.instagram.com/atleticakapiva/"><span style="color:rgb(248, 170, 0);">
+                    Atlética Kapiva</span></a>.</p>
     </div>
 </body>
 
